<resources>
    <string name="app_name">seminar5</string>

    <!-- bottomnavigation-->
    <string name="home">홈</string>
    <string name="foryou">For You</string>
    <string name="serach">검색</string>
    <string name="mymusic">내음악</string>
    <string name="menu">전체메뉴</string>


    <!-- menu fragment -->
    <string name="musichug">뮤직허그</string>
    <string name="djchat">DJ차트</string>
    <string name="friend">친구</string>


    <!--inhome fragment-->
    <string name="popularity">실시간 인기</string>
    <string name="now">최신</string>
    <string name="create">개설하기</string>

    <!--item_list-->
    <string name="fan">팬</string>
    <string name="listener">청취자수</string>

    <!--music player-->
    <string name="title">춤의왕</string>
    <string name="singer">차세대</string>

    <!--dialog-->
    <string name="room_name_hint">나만의 뮤직허그 방명을 입력하세요.</string>
    <string name="maxlength">최대 20자까지 입력 가능합니다.</string>
    <string name="editnickname">닉네임 변경은 내정보>설정에서 가능합니다.</string>
    <string name="listen">듣기</string>
    <string name="cancel">취소</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chatting">ChattingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

<!--    Strings used for chatting information-->
    <string name="musichug_started">지니의 재생목록으로 뮤직허그가 시작되었습니다.</string>
    <string name="chatting_information">채팅 내용은 별도 저장되지 않으며,\n욕설·혐오·비방 표현은 제재될 수 있습니다.</string>
    <string name="send">전송</string>
    <string name="chattingTitle">나만의 뮤직허그</string>
    <string name="input_hint">대화를 입력해주세요</string>
</resources>