<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="296dp"
    android:layout_height="420dp"
    android:background="@drawable/bg_dialog"
    tools:context=".ui.CreateDialogFragment">


    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_dialog_profile" />

    <EditText
        android:id="@+id/et_input_room_name"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/bg_dialog_textview"
        android:fontFamily="@font/applesdcothicneo"
        android:hint="@string/room_name_hint"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:paddingStart="15dp"
        android:textColor="@color/genie_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <TextView
        android:id="@+id/tv_maxlengthis20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/applesdcothicneo"
        android:text="@string/maxlength"
        android:textColor="#BCBCBC"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_input_room_name" />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_dialog_textview"
        android:enabled="false"
        android:fontFamily="@font/applesdcothicneo"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:text="waterdeeran"
        android:textColor="@color/genie_black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/et_input_room_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_input_room_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_maxlengthis20" />

    <TextView
        android:id="@+id/tv_change_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/applesdcothicneo"
        android:text="@string/editnickname"
        android:textColor="#BCBCBC"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/tv_maxlengthis20"
        app:layout_constraintTop_toBottomOf="@+id/et_nickname" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:background="#F5F5F5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_change_nickname" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_listen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/applesdcothicneo"
        android:text="@string/listen"
        android:textColor="#3D97F7"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fontFamily="@font/applesdcothicneo"
        android:text="@string/cancel"
        android:textColor="@color/genie_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_listen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>
